--- a/HTML/FORMULARIS/Formulari_Exemple.html
+++ b/HTML/FORMULARIS/Formulari_Exemple.html
@@ -11,6 +11,10 @@
             font-family: Arial, Helvetica, sans-serif;
         }
 
+        background {
+            background-color: lightblue;
+        }
+
         h1 {
             font-family: Arial, Helvetica, sans-serif;
         }
