introducció de for i id per condicions

--- a/HTML/FORMULARIS/Formulari_Exemple.html
+++ b/HTML/FORMULARIS/Formulari_Exemple.html
@@ -31,11 +31,11 @@
             onclick="alert('Les societats Transports de Barcelona, SA; Ferrocarril Metropolità de Barcelona, SA, i Projectes i Serveis de Mobilitat, SA, (d’ara endavant, TMB) han creat JoTMBé amb la finalitat d’oferir a les persones usuàries del servei de transport públic a la ciutat de Barcelona i a la seva àrea metropolitana que s’hi inscriguin com a membres un seguit de serveis i avantatges per millorar la seva experiència de mobilitat i per conèixer tot el que TMB pot oferir i presentar per mitjà d’aquesta comunitat, i beneficiar-se’n. La relació entre els membres de JoTMBé i TMB es basa en tres grans àmbits de benefici per al client: econòmic/promocional, emocional i de servei.!')"
             value="Prem aquí per llegir els nostres termes i condicions.">
         <br><br>
-        <input type="radio" name="accepto">
-        <label> Accepto les condicions </label> <!--label serveix per introduïr text-->
+        <input  id="radio2" checked type="radio" name="x">
+        <label for="radio2"> Accepto les condicions </label> <!--label serveix per introduïr text-->
         <br>
-        <input type="radio" name="no accepto">
-        <label> No accepto les condicions </label>
+        <input  id="radio1" type="radio" name="x">
+        <label for="radio1"> No accepto les condicions </label>
         <br><br>
         <label> Introdueix el nom d'usuari </label>
         <input type="text" placeholder="usuari o email" name="usuari"> <!--input és l'etiqueta per fer els camps del formulari.-->
