--- a/HTML/FORMULARIS/Formulari_Exemple.html
+++ b/HTML/FORMULARIS/Formulari_Exemple.html
@@ -6,20 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <style>
-        label {
-            font-family: Arial, Helvetica, sans-serif;
-        }
-
-        background {
-            background-color: lightblue;
-        }
-
-        h1 {
-            font-family: Arial, Helvetica, sans-serif;
-        }
-    </style>
-
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
